ui_tests/where_bounds_4.stderr
error: expected }
  ┌─ main.box:7:5
  │
7 │     Other
  │     ^^^^^ found Other

