ui_tests/where_bounds_4.box
trait Trait {}
trait Other {}

fn foo()
where {
    Trait
    Other
} {}